syntax = "proto3";

package lagompb;

import "scalapb/scalapb.proto";
import "lagompb/extensions.proto";
import "google/protobuf/any.proto";

message TestCmd {
    string company_uuid = 1 [(lagompb.command).entity_id = true];
    string name = 2;
}

// Used to test successful command
// handler response without persisting
// an event
message TestGetCmd {
    string company_uuid = 1 [(lagompb.command).entity_id = true];
}

// It is used to test unhandled
// command handler response
message TestEmptyCmd {
    string company_uuid = 1 [(lagompb.command).entity_id = true];
}

// Used to test Empty command handler
// success response
message TestEmptySuccessCmd {
    string company_uuid = 1 [(lagompb.command).entity_id = true];
}

// Used to handle wrong event emitted by
// the command handler
message TestUnknownEventCmd {
    string company_uuid = 1 [(lagompb.command).entity_id = true];
}

// Used to test a fail command handler response
message TestFailCmd {
    string company_uuid = 1 [(lagompb.command).entity_id = true];
}

message NoCmd {
}

message WrongEventTagger {
    option (scalapb.message).extends = "lagompb.LagompbEvent";
}

message TestEvent {
    string event_uuid = 1 [(lagompb.kafka).partition_key = true];
    string name = 2;
}

message TestState {
    string company_uuid = 1;
    string name = 2;
}

message WrongEvent {
    string event_uuid = 1;
}

message TestAny {
    google.protobuf.Any cmd = 1;
}

enum TestEnum {
    ZERO = 0;
    ONE = 1;
    TWO = 2;
}

message Outer {
    string val = 1;
}
